--- a/css/portfolio.css
+++ b/css/portfolio.css
@@ -4,30 +4,16 @@
 
 body{
 font-family: 'Lato', sans-serif;
-font-size: 1.6em;
-line-height: 200%;
+word-wrap: break-word;
 }
-.bg-black{
-	background-color: black;
-}
-.bg-blue {
-	background-color: #354b59;
-	margin-top: 55px;
-	min-height: 120px;
-}
+
 
 .link{
 	color: #747704
 }
 
-#my-image{
-	margin-top: 10px;
-	text-align: center;
-}
 .subtitle{
-/*	margin-right: 18%;*/
-color: #efefef;
-
+	margin-right: 18%;
 }
 
 .title2 {
@@ -38,20 +24,15 @@ color: #efefef;
 
 }
 
-.white-txt{
-	color: white;
-}
-
 .title-logo {
-	width: 80px;
-	height:70px;
+	width: 100px;
+	height:100px;
 	margin-top: 20px;
-	margin-right: 10px;
 }
 
 .title{
-	color: #efefef;
-
+	font-family: 'Cinzel', serif;
+	margin-top: 40px;
 }
 
 
