--- a/css/main.css
+++ b/css/main.css
@@ -1,8 +1,13 @@
 
-@media (max-width: 309px) {
+@media (max-width: 444px) {
 	.navbar-brand {
 		font-size: .8em;
 	}
+
+	h3,h4{
+		font-size: .9em;
+	}
+
 }
 
 body{
@@ -46,7 +51,6 @@ color: #efefef;
 	width: 80px;
 	height:70px;
 	margin-top: 20px;
-	margin-right: 10px;
 }
 
 .title {
