--- a/css/main.css
+++ b/css/main.css
@@ -1,4 +1,3 @@
-
 @media (max-width: 444px) {
 	.navbar-brand {
 		font-size: .8em;
@@ -25,6 +24,12 @@ line-height: 200%;
 .bg-blue h2{
 	color: #efefef;
 	display: inline;
+
+}
+
+#content{
+
+margin-top: 60px;
 
 }
 
