--- a/css/main.css
+++ b/css/main.css
@@ -9,15 +9,69 @@
 
 }
 
+/* {
+	border: 1px solid red !important;
+}*/
+
 body{
 font-family: 'Lato', sans-serif;
-font-size: 1.6em;
-line-height: 200%;
+word-wrap: break-word;
 }
+
+
+.link{
+	color: #747704
+}
+
+.subtitle{
+	font-size: 5min;
+}
+
+.title2 {
+	font-size: 5vmin;
+	font-weight: bold;
+	margin-top: 35px;
+	margin-bottom: 20px;
+
+}
+
+.title-logo {
+	width: 100px;
+	height:100px;
+}
+
+.title{
+	font-family: 'Cinzel', serif;
+}
+
+
+.title-super{
+	font-size: 5vmin;
+
+}
+
+.rounded-corners{
+	border-radius: 8px;
+
+}
+
+
+
+hr {
+	height: 4px;
+	background-color: #BCBBBB;
+	margin-top: 6px;
+	margin-bottom: 40px;
+}
+
+.space{
+	margin-top: 0px;
+	font-size: 4vmin;
+}
+
 
 .bg-blue {
 	background-color: #354b59;
-	margin-top: 55px;
 	min-height: 120px;
 }
 
@@ -29,36 +83,14 @@ line-height: 200%;
 
 #content{
 
-margin-top: 60px;
+margin-top: 55px;
 
 }
 
-#my-image{
-	margin-top: 10px;
-	text-align: center;
+
+.title-image{
+
+	width: 75vmax;
 }
 
-.subtitle{
-
-color: #efefef;
-
-}
-
-.tie-photo{
-	margin-top: 20px;
-}
-
-.white-txt{
-	color: white;
-}
-
-.title-logo {
-	width: 80px;
-	height:70px;
-	margin-top: 20px;
-}
-
-.title {
-	color: #efefef;
-}
 
