--- a/css/main.css
+++ b/css/main.css
@@ -13,9 +13,16 @@
 	border: 1px solid red !important;
 }*/
 
+.pages-logo{
+	width: 80px;
+    height: 70px;
+    margin-top: 20px;
+}
+
 body{
 font-family: 'Lato', sans-serif;
 word-wrap: break-word;
+line-height: 200%;
 }
 
 
@@ -23,8 +30,20 @@ word-wrap: break-word;
 	color: #747704
 }
 
+#my-image {
+    margin-top: 10px;
+}
+
+.pages-title{
+	color: #efefef;
+}
+
 .subtitle{
 	font-size: 4vmin;
+}
+
+.tie-photo {
+    margin-top: 20px;
 }
 
 .title2 {
@@ -72,6 +91,7 @@ hr {
 
 .bg-blue {
 	background-color: #354b59;
+	margin-top: 55px;
 	min-height: 120px;
 }
 
