--- a/css/main.css
+++ b/css/main.css
@@ -1,17 +1,19 @@
-@media (max-width: 444px) {
-	.navbar-brand {
-		font-size: .8em;
-	}
-
-	h3,h4{
-		font-size: .9em;
-	}
-
-}
-
 /* {
 	border: 1px solid red !important;
 }*/
+
+.spacer{
+	margin-top: 30px;
+
+}
+.wrap{
+	display: inline;
+	margin-top: 40px;
+}
+ .medium-text{
+ 	font-size: 2.5vmin;
+
+ }
 
 .pages-logo{
 	width: 80px;
@@ -39,7 +41,9 @@ line-height: 200%;
 }
 
 .star{
-	font-size: 40px;
+	font-size: 4.6vw;
+	display: inline-block;
+	vertical-align: middle;
 
 }
 
@@ -122,4 +126,31 @@ margin-top: 55px;
 	width: 75vmax;
 }
 
+
+
+
+
+@media (max-width: 444px) {
+	.navbar-brand {
+		font-size: .8em;
+	}
+
+	h3,h4{
+		font-size: .9em;
+	}
+
+	.star{ font-size: 8vw;
+	}
+
+}
+
+@media (max-width: 700px) {
+
+
+	.star{
+		font-size: 8vw;
+
+	}
+
+}
 
