--- a/css/main.css
+++ b/css/main.css
@@ -3,15 +3,16 @@
 }*/
 
 .spacer{
-	margin-top: 30px;
+	margin-top: 5px;
+	margin-bottom: 0px;
+
 
 }
 .wrap{
 	display: inline;
-	margin-top: 40px;
 }
  .medium-text{
- 	font-size: 2.5vmin;
+ 	font-size: 3vmin;
 
  }
 
@@ -41,9 +42,9 @@ line-height: 200%;
 }
 
 .star{
-	font-size: 4.6vw;
-	display: inline-block;
+	font-size: 3.5vw;
 	vertical-align: middle;
+	color: #354b59;
 
 }
 
